Bug Fix: Chrome--Text input fields no longer shift elements on focus.

--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -22,6 +22,8 @@
     width: 290px;
     padding: 2px;
     margin: 1px;
+
+    border: 1px solid grey;
 }
 
 .signin-input-username:focus,
